--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Prueba Blacksip - a tidy list of planes</title>
+  <title>A tidy list of planes</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
